--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,9 +16,7 @@
             pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$">
           </ion-input>
         </ion-item>
-        <div class="sep">
-
-        </div>
+        <div class="sep"></div>
         <ion-item>
           <ion-label position="floating">Contraseña:</ion-label>
           <ion-input type="password" name="password" required pattern="([A-Za-z][A-Za-z0-9]*[0-9][A-Za-z0-9])\S{2,16}$">
@@ -33,7 +31,7 @@
     </form>
 
     <div class="ion-padding ion-text-center">
-      <ion-button color="danger" fill="outline" size="default">
+      <ion-button color="danger" fill="outline" size="default" routerLink="/register">
         Registrase
       </ion-button>
     </div>
