--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.sep {
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
+}
+
+.top {
+    margin-top: 35px !important;
+}
