--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -14,26 +14,37 @@
       <ion-list class="ion-padding">
         <ion-item>
           <ion-label position="floating">Nombres: </ion-label>
-          <ion-input type="text" required></ion-input>
+          <ion-input type="text" required [(ngModel)]="usuario.nombres" name="nombres"></ion-input>
         </ion-item>
         <div class="sep"></div>
         <ion-item>
           <ion-label position="floating">Fecha Nacimiento: </ion-label>
-          <ion-datetime display-format="YYYY MMMM DD" required></ion-datetime>
+          <ion-datetime display-format="MMM DD, YYYY" required [(ngModel)]="usuario.fecha" name="fecha"></ion-datetime>
         </ion-item>
         <div class="sep"></div>
         <ion-item>
           <ion-label position="floating">Correo: </ion-label>
-          <ion-input type="email" required></ion-input>
+          <ion-input type="email" required [(ngModel)]="usuario.correo" name="correo"></ion-input>
         </ion-item>
         <div class="sep"></div>
         <ion-item>
           <ion-label position="floating">Contraseña: </ion-label>
-          <ion-input type="password" required></ion-input>
+          <ion-input type="password" required [(ngModel)]="usuario.password" name="password"></ion-input>
         </ion-item>
+        <ion-item>
+          <ion-label position="floating">Telefono: </ion-label>
+          <ion-input type="number" required [(ngModel)]="usuario.telefono" name="telefono"></ion-input>
+        </ion-item>
+        
       </ion-list>
+
+      <ion-button class="ion-padding-start" (click)="direccion()">
+        Agregar Direccion
+      </ion-button>
+
+
       <div class="ion-padding ion-text-center">
-        <ion-button color="danger" expand="blocl">
+        <ion-button color="danger" expand="block" (click)="registrar()">
           Registrame
         </ion-button>
       </div>
