[add] servicio para buscar libros por una key

--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,5 +1,8 @@
 <ion-content>
   <h1 class="ion-text-center">Libro {{ id }}</h1>
+  <ion-button (click)="buscar()">
+    Buscar
+  </ion-button>
 </ion-content>
 
 <ion-footer>
