[add] vista para buscar

--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button>
-        <ion-icon slot="start" name="basket"></ion-icon>
+        <ion-icon slot="start" name="cart"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>inicio</ion-title>
@@ -28,4 +28,9 @@
       </ion-row>
     </ion-slide>
   </ion-slides>
+
 </ion-content>
+<app-footer></app-footer>
+
+
+
