[add] conexion vista buscar con el servicio, 1 bug

--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -2,10 +2,11 @@
   <ion-toolbar>
     <ion-title class="ion-text-center">Busca un libro</ion-title>
   </ion-toolbar>
-  <ion-searchbar animated>
+  <ion-searchbar animated (ionChange)="buscar($event)">
 
   </ion-searchbar>
 </ion-header>
+
 
 <ion-content>
 
