--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,35 +1,30 @@
 <ion-content>
-  <h1 class="ion-text-left ion-padding">Libro {{ id }}</h1>
-
   <ion-grid fixed>
     <ion-row>
       <ion-col size="5">
         <ion-card class="anc">
           <ion-card-header>
             <ion-img class="alt" [src]="poster"></ion-img>
-            <ion-card-subtitle>{{ id }}</ion-card-subtitle>
+            <ion-card-subtitle>{{ libro.titulo }}</ion-card-subtitle>
             <ion-card-title>Miguel de Cervantes</ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
       <ion-col size="7">
-        <h4>Los juegos del hambre</h4>
+        <h4>{{ libro.titulo }}</h4>
         <br>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Molestias iusto reiciendis quo, quam tenetur,
-          pariatur nostrum corporis aliquam ipsum deleniti iste doloremque
-          voluptatum rem praesentium fugit atque possimus ea minima?
+         {{ libro.descripcion }}
         </p>
         <br>
         <div>
           <ion-chip>
             <ion-icon name="podium" color="primary"></ion-icon>
-            <ion-label>Paginas</ion-label>
+            <ion-label>{{ libro.paginas }}</ion-label>
           </ion-chip>
           <ion-chip>
             <ion-icon name="pricetags" color="primary"></ion-icon>
-            <ion-label>Precio</ion-label>
+            <ion-label>{{ libro.precio }}</ion-label>
           </ion-chip>
         </div>
       </ion-col>
