[add] alterando cantidad de un item

--- a/src/app/components/carrito-compras/carrito-compras.component.html
+++ b/src/app/components/carrito-compras/carrito-compras.component.html
@@ -6,7 +6,7 @@
     <ion-card-title>Las aventuras de Ruben y el viejo parra</ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    Cantidad: 4
+    Cantidad: {{ cantidad }}
     <ion-button (click)="sumar()">
       +
     </ion-button>
