--- a/src/app/components/carrito-compras/carrito-compras.component.html
+++ b/src/app/components/carrito-compras/carrito-compras.component.html
@@ -1,5 +1,23 @@
 <ion-content class="ion-padding">
-  <h3>Carrito de compras</h3>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="8">
+        <h3>Carrito de compras</h3>
+      </ion-col>
+      <ion-col size="4">
+        <ion-row>
+          <ion-col size="12">
+            Total
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            ${{ total }}
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 <ion-card>
   <ion-card-header>
     <ion-card-subtitle>Libro 1</ion-card-subtitle>
