[add] boton pago solo html

--- a/src/app/components/carrito-compras/carrito-compras.component.html
+++ b/src/app/components/carrito-compras/carrito-compras.component.html
@@ -36,6 +36,10 @@
     </ion-button>
   </ion-card-content>
 </ion-card>
+<ion-button (click)="pago()" expand="block">
+  <ion-icon slot="start" name="cash"></ion-icon>
+  Pagar
+</ion-button>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
