--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -31,7 +31,7 @@
     </ion-row>
     <ion-row class="ion-text-center">
       <ion-col size="5">
-        <ion-button class="siz">
+        <ion-button class="siz" (click)="votar()">
           <ion-icon slot="icon-only" name="thumbs-up"></ion-icon>
         </ion-button>
       </ion-col>
@@ -70,3 +70,4 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
+
