--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title class="ion-text-center">Busca un libro</ion-title>
   </ion-toolbar>
-  <ion-searchbar animated (ionChange)="buscar($event)">
+  <ion-searchbar animated (ionInput)="buscar($event)">
 
   </ion-searchbar>
 </ion-header>
