--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -1,4 +1,9 @@
 .alt {
-    height: auto !important;
-    width: auto !important;
+    height: 240px !important;
+    width: 100% !important;
+    
+}
+
+.altc {
+    height: 370px !important;
 }
