--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,15 +1,17 @@
 <ion-footer>
-  <ion-buttons slot="start">
-    <ion-button (click)="inicio()">
-      <ion-icon slot="start" name="add"></ion-icon>
-      Inicio
-    </ion-button>
-  </ion-buttons>
-  
-  <ion-buttons slot="end">
-    <ion-button (click)="buscar()">
-      <ion-icon slot="start" name="add"></ion-icon>
-      Buscar
-    </ion-button>
-  </ion-buttons>
+  <ion-toolbar>
+    <ion-buttons slot="start" class="margi">
+      <ion-button (click)="inicio()">
+        <ion-icon slot="start" name="home"></ion-icon>
+        Inicio
+      </ion-button>
+    </ion-buttons>
+    
+    <ion-buttons slot="end" class="margd">
+      <ion-button (click)="buscar()">
+        <ion-icon slot="start" name="search"></ion-icon>
+        Buscar
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-footer>
