--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -14,13 +14,14 @@
     <ion-slide *ngFor="let libro of libros | pares">
       <ion-row>
         <ion-col *ngFor="let lib of libro">
-          <ion-card (click)="verDetalle(lib.id)">
+          <ion-card class="altc" (click)="verDetalle(lib.id)">
               <ion-card-header>
-                <ion-img class="alt" [src]="poster"></ion-img>
-                <ion-card-subtitle>{{ lib.titulo }}</ion-card-subtitle>
+                <img class="alt" [src]="poster"/>
                 <ion-card-title>{{ lib.titulo }}</ion-card-title>
                 <ion-card-content>
-                  {{ lib.descripcion }}
+                  <p class="ion-text-xl-justify">
+                    {{ lib.descripcion | slice: 0:60 }} ...
+                  </p>
                 </ion-card-content>
               </ion-card-header>
           </ion-card>
@@ -31,6 +32,3 @@
 
 </ion-content>
 <app-footer></app-footer>
-
-
-
