--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -38,7 +38,7 @@
     </ion-row>
     <ion-row class="ion-text-center">
       <ion-col size="5">
-        <ion-button class="siz">
+        <ion-button class="siz" (click)="agregarAlCarrito(libro.id)">
           <ion-icon slot="icon-only" name="cart"></ion-icon>
         </ion-button>
       </ion-col>
