--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -1,9 +1,14 @@
-.alt {
-    height: 240px !important;
-    width: 100% !important;
-    
+ion-card-header {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: auto;
 }
 
-.altc {
-    height: 370px !important;
+ion-card-header img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+ion-card-title {
+    font-size: 11px;
 }
