[fix] enviando el id del producto y la cantidad para su detalle

--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -17,12 +17,11 @@
           <ion-card (click)="verDetalle(lib.id)">
               <ion-card-header>
                 <img [src]="poster"/>
-                <ion-card-title>{{ lib.titulo }}</ion-card-title>
-                <ion-card-content>
-                  <p class="ion-text-xl-justify">
-                   Autores
+                <ion-card-title>
+                  <p>
+                    {{ lib.titulo }}
                   </p>
-                </ion-card-content>
+                </ion-card-title>
               </ion-card-header>
           </ion-card>
         </ion-col>
