--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -6,16 +6,18 @@
           <ion-card-header>
             <ion-img class="alt" [src]="poster"></ion-img>
             <ion-card-subtitle *ngIf="libro != null">{{ libro.titulo }}</ion-card-subtitle>
-            <ion-card-title>Miguel de Cervantes</ion-card-title>
+            <ion-card-title *ngFor="let a of autores">
+                <p>{{ a.nombres }}</p>
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
       <ion-col size="7">
         <h4 *ngIf="libro != null">{{ libro.titulo }}</h4>
         <br>
-        <p *ngIf="libro != null">
+        <h4 *ngIf="libro != null">
          {{ libro.descripcion }}
-        </p>
+        </h4>
         <br>
         <div>
           <ion-chip>
