--- a/src/app/components/carrito-compras/carrito-compras.component.html
+++ b/src/app/components/carrito-compras/carrito-compras.component.html
@@ -12,7 +12,7 @@
         </ion-row>
         <ion-row>
           <ion-col size="12">
-            ${{ total }}
+            ${{ subtotal }}
           </ion-col>
         </ion-row>
       </ion-col>
