--- a/src/app/pages/carrito/carrito.page.html
+++ b/src/app/pages/carrito/carrito.page.html
@@ -1,9 +1,81 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>carrito</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="8">
+        <h3>Carrito de compras</h3>
+      </ion-col>
+      <ion-col size="4">
+        <ion-row>
+          <ion-col size="12">
+            Total
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            ${{ subtotal }}
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-card *ngFor="let l of libros; index as i">
+    <ion-card-header>
+      <ion-card-title>{{ l.titulo }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
 
-<ion-content>
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="4"> Cantidad: {{ cantidades[i] }} </ion-col>
+          <ion-col size="2">
+            <ion-button (click)="sumar(posiciones[i], '+')">
+              +
+            </ion-button>
+          </ion-col>
+          <ion-col size="2">
+            <ion-button (click)="sumar(posiciones[i], '-')">
+              -
+            </ion-button>
+          </ion-col>
+          <ion-col size="2"></ion-col>
+          <ion-col size="2">
+            <ion-button class="fond" (click)="quitar(l, posiciones[i], l.id)" color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button (click)="direccion()">
+          Direccion
+        </ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button (click)="tarjeta()">
+          Tarjeta
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-button (click)="pago()" expand="block">
+          <ion-icon slot="start" name="cash"></ion-icon>
+          Pagar
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Regresar" defaultHref="/inicio"></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
