[fix] reciendo solo direcciones y tarjetas unicas

--- a/src/app/components/select-direccion/select-direccion.component.html
+++ b/src/app/components/select-direccion/select-direccion.component.html
@@ -1,4 +1,7 @@
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.8" pullMin="60" pullMax="120">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-list>
     <ion-list>
       <ion-radio-group name="auto">
