[fix] enviar varias direcciones

--- a/src/app/components/confirmar-pago/confirmar-pago.component.html
+++ b/src/app/components/confirmar-pago/confirmar-pago.component.html
@@ -2,4 +2,7 @@
   <ion-button (click)="confirmar()">
     Realizar Pago
   </ion-button>
+  <ion-button (click)="cancelar()" color="danger">
+    Cancelar
+  </ion-button>
 </ion-content>
