--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -19,7 +19,7 @@
         <ion-col *ngFor="let lib of libro">
           <ion-card (click)="verDetalle(lib.id)">
               <ion-card-header>
-                <img [src]="poster"/>
+                <img [src]="'data:image/JPEG;base64,'+lib.portada"/>
                 <ion-card-title>
                   <p>
                     {{ lib.titulo }}
