--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -4,6 +4,9 @@
       <ion-button (click)="carrito()">
         <ion-icon slot="start" name="cart"></ion-icon>
       </ion-button>
+      <ion-button (click)="compatidos()">
+        <ion-icon slot="start" name="share"></ion-icon>
+      </ion-button>
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="contact"></ion-icon>
       </ion-button>
