[add] ion-refresh para libros, y para compartidos

--- a/src/app/components/compartidos-me/compartidos-me.component.html
+++ b/src/app/components/compartidos-me/compartidos-me.component.html
@@ -1,10 +1,7 @@
-<p>
-  compartidos-me works!
-  {{ idUser }}
-</p>
-
 <ion-content>
-
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.8" pullMin="60" pullMax="120">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-grid fixed>
 
     <ion-row *ngFor="let libro of libros; let i=index">
