--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -10,6 +10,20 @@
 
 <ion-content>
 
+  <ion-list>
+    <ion-item *ngFor="let libro of libros">
+      <ion-card>
+        <img [src]="'data:image/JPEG;base64,'+libro.portada"/>
+        <ion-card-header>
+          <ion-card-subtitle>{{ libro.fechaPublicacion | date: 'dd/MM/yyyy' }}</ion-card-subtitle>
+          <ion-card-title>{{ libro.titulo }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          {{ libro.descripcion }}
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
 <app-footer></app-footer>
