--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -3,20 +3,33 @@
     <ion-row>
       <ion-col size="5">
         <ion-card class="anc">
-
           <img [src]="'data:image/JPEG;base64,'+libro.portada" />
           <ion-card-subtitle *ngIf="libro != null">{{ libro.titulo }}</ion-card-subtitle>
-          <ion-card-title *ngFor="let a of autores">
-            <p>{{ a.nombres }}</p>
-          </ion-card-title>
-
         </ion-card>
       </ion-col>
       <ion-col size="7">
-        <ion-text *ngIf="libro != null" color="primary">
-          <h4 text-end>{{ libro.descripcion}}</h4>
-        </ion-text>
-
+        <ion-row>
+          <ion-col size="12">
+            <h6>Autor(es)</h6>
+            <ion-chip *ngFor="let a of autores" color="primary" mode="ios" outline="true">
+              <ion-label>{{ a.nombres }}</ion-label>
+              <ion-icon name="contact"></ion-icon>
+            </ion-chip>
+            <h6>Categoria(s)</h6>
+            <ion-chip *ngFor="let c of categorias" color="primary" mode="ios" outline="true">
+              <ion-label>{{ c.nombre }}</ion-label>
+              <ion-icon name="construct"></ion-icon>
+            </ion-chip>
+           
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-text *ngIf="libro != null" color="primary">
+              <h4 class="ion-text-end">{{ libro.descripcion}}</h4>
+            </ion-text>
+          </ion-col>
+        </ion-row>
       </ion-col>
     </ion-row>
   </ion-grid>
