--- a/src/app/components/confirmar-pago/confirmar-pago.component.html
+++ b/src/app/components/confirmar-pago/confirmar-pago.component.html
@@ -1,8 +1,26 @@
 <ion-content>
-  <ion-button (click)="confirmar()">
-    Realizar Pago
-  </ion-button>
-  <ion-button (click)="cancelar()" color="danger">
-    Cancelar
-  </ion-button>
+  <div>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button (click)="confirmar()">
+            Realizar Pago
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">
+          
+        </ion-col>
+        <ion-col size="4">
+          <ion-button (click)="cancelar()" color="danger">
+            Cancelar
+          </ion-button>
+        </ion-col>
+        <ion-col size="4">
+          
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
