--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,7 +25,7 @@
         </ion-item>
       </ion-list>
       <div class="ion-padding ion-text-center">
-        <ion-button expand="full" (click)="login()">
+        <ion-button expand="full" (click)="iniciar()">
           Ingresar
         </ion-button>
       </div>
